--- a/index.html
+++ b/index.html
@@ -1146,6 +1146,138 @@
 
 
 
+        <!-- Trámites por Estado Section (SEO Local: CDMX, EdoMex, Morelos) -->
+        <section id="tramites-estados" class="section-padding"
+            style="background: linear-gradient(135deg, #f8fafc 0%, #e2e8f0 100%);">
+            <div class="container">
+                <div class="section-title">
+                    <h2>Trámites Vehiculares por Estado 2026</h2>
+                    <p>Gestión rápida, segura y sin filas en tu entidad</p>
+                </div>
+
+                <div class="services-grid" style="grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));">
+
+                    <!-- Estado de México -->
+                    <div class="service-item premium-item"
+                        style="border-top: 5px solid #ea580c; display: flex; flex-direction: column; justify-content: space-between;">
+                        <div>
+                            <div class="service-icon"
+                                style="background: rgba(234, 88, 12, 0.1); color: #ea580c; width: 60px; height: 60px; border-radius: 50%; display: flex; align-items: center; justify-content: center; margin: 0 auto 1.5rem;">
+                                <i class="fas fa-map-marked-alt" style="font-size: 1.5rem;"></i>
+                            </div>
+                            <h3
+                                style="text-align: center; color: #1e293b; margin-bottom: 1rem; font-size: 1.5rem; font-weight: 800;">
+                                Estado de México</h3>
+                            <ul
+                                style="list-style: none; padding: 0; margin-bottom: 1.5rem; color: #475569; text-align: left;">
+                                <li style="margin-bottom: 0.8rem;"><i class="fas fa-check"
+                                        style="color: #25d366; margin-right: 0.5rem; font-weight: 900;"></i> <strong
+                                        style="color: #1e293b;">Reemplacamiento 2026</strong> <br><small>Obligatorio
+                                        para placas 2021</small></li>
+                                <li style="margin-bottom: 0.8rem;"><i class="fas fa-check"
+                                        style="color: #25d366; margin-right: 0.5rem; font-weight: 900;"></i> <strong
+                                        style="color: #1e293b;">Alta de Placas EdoMex</strong> <br><small>Autos nuevos,
+                                        usados o foráneos</small></li>
+                                <li style="margin-bottom: 0.5rem;"><i class="fas fa-check"
+                                        style="color: #25d366; margin-right: 0.5rem; font-weight: 900;"></i> <strong
+                                        style="color: #1e293b;">Licencia Moto Tipo C</strong> <br><small>Trámite
+                                        directo, 100% legal</small></li>
+                            </ul>
+                        </div>
+                        <div style="text-align: center; margin-top: auto;">
+                            <a href="tramites-edomex.html" class="btn"
+                                style="background: white; border: 1px solid #e2e8f0; color: #64748b; padding: 0.5rem 1rem; margin-bottom: 1rem; display: inline-block; font-size: 0.9rem; font-weight: 600; text-decoration: none;">Ver
+                                todos los detalles</a>
+                            <a href="https://wa.me/525535757364?text=Hola,%20necesito%20ayuda%20con%20un%20trámite%20vehicular%20del%20Estado%20de%20México"
+                                class="btn btn-whatsapp"
+                                style="width: 100%; display: flex; justify-content: center; align-items: center; gap: 0.5rem; font-size: 1rem;"><i
+                                    class="fab fa-whatsapp"></i> Cotizar EdoMex</a>
+                        </div>
+                    </div>
+
+                    <!-- CDMX -->
+                    <div class="service-item premium-item"
+                        style="border-top: 5px solid #2563eb; display: flex; flex-direction: column; justify-content: space-between;">
+                        <div>
+                            <div class="service-icon"
+                                style="background: rgba(37, 99, 235, 0.1); color: #2563eb; width: 60px; height: 60px; border-radius: 50%; display: flex; align-items: center; justify-content: center; margin: 0 auto 1.5rem;">
+                                <i class="fas fa-city" style="font-size: 1.5rem;"></i>
+                            </div>
+                            <h3
+                                style="text-align: center; color: #1e293b; margin-bottom: 1rem; font-size: 1.5rem; font-weight: 800;">
+                                Ciudad de México</h3>
+                            <ul
+                                style="list-style: none; padding: 0; margin-bottom: 1.5rem; color: #475569; text-align: left;">
+                                <li style="margin-bottom: 0.8rem;"><i class="fas fa-check"
+                                        style="color: #25d366; margin-right: 0.5rem; font-weight: 900;"></i> <strong
+                                        style="color: #1e293b;">Licencia Permanente Tipo A</strong> <br><small>Trámite
+                                        de única vez, para toda la vida</small></li>
+                                <li style="margin-bottom: 0.8rem;"><i class="fas fa-check"
+                                        style="color: #25d366; margin-right: 0.5rem; font-weight: 900;"></i> <strong
+                                        style="color: #1e293b;">Alta de Placas CDMX</strong> <br><small>Gestión rápida,
+                                        sin cita ni filas</small></li>
+                                <li style="margin-bottom: 0.5rem;"><i class="fas fa-check"
+                                        style="color: #25d366; margin-right: 0.5rem; font-weight: 900;"></i> <strong
+                                        style="color: #1e293b;">Cambio de Propietario</strong> <br><small>Actualización
+                                        segura de tarjeta de circulación</small></li>
+                            </ul>
+                        </div>
+                        <div style="text-align: center; margin-top: auto;">
+                            <a href="licencia-permanente-cdmx.html" class="btn"
+                                style="background: white; border: 1px solid #e2e8f0; color: #64748b; padding: 0.5rem 1rem; margin-bottom: 1rem; display: inline-block; font-size: 0.9rem; font-weight: 600; text-decoration: none;">Ver
+                                Licencia Permanente</a>
+                            <a href="https://wa.me/525535757364?text=Hola,%20necesito%20ayuda%20con%20un%20trámite%20vehicular%20de%20la%20CDMX"
+                                class="btn btn-whatsapp"
+                                style="width: 100%; display: flex; justify-content: center; align-items: center; gap: 0.5rem; font-size: 1rem;"><i
+                                    class="fab fa-whatsapp"></i> Cotizar CDMX</a>
+                        </div>
+                    </div>
+
+                    <!-- Morelos (RECUPERADO Y MEJORADO) -->
+                    <div class="service-item premium-item"
+                        style="border-top: 5px solid #10b981; display: flex; flex-direction: column; justify-content: space-between;">
+                        <div>
+                            <div class="service-icon"
+                                style="background: rgba(16, 185, 129, 0.1); color: #10b981; width: 60px; height: 60px; border-radius: 50%; display: flex; align-items: center; justify-content: center; margin: 0 auto 1.5rem;">
+                                <i class="fas fa-sun" style="font-size: 1.5rem;"></i>
+                            </div>
+                            <h3
+                                style="text-align: center; color: #1e293b; margin-bottom: 1rem; font-size: 1.5rem; font-weight: 800;">
+                                Morelos</h3>
+                            <ul
+                                style="list-style: none; padding: 0; margin-bottom: 1.5rem; color: #475569; text-align: left;">
+                                <li style="margin-bottom: 0.8rem;"><i class="fas fa-check"
+                                        style="color: #25d366; margin-right: 0.5rem; font-weight: 900;"></i> <strong
+                                        style="color: #1e293b;">Refrendo Morelos 2026</strong> <br><small>100% en línea,
+                                        lista en menos de 24hrs</small></li>
+                                <li style="margin-bottom: 0.8rem;"><i class="fas fa-check"
+                                        style="color: #25d366; margin-right: 0.5rem; font-weight: 900;"></i> <strong
+                                        style="color: #1e293b;">Alta de Placas Morelos</strong> <br><small>Ideal para
+                                        evitar tenencia alta</small></li>
+                                <li
+                                    style="margin-bottom: 0.5rem; font-size: 0.9rem; background: #f8fafc; padding: 0.75rem; border-radius: 6px; margin-top: 1rem; border: 1px dashed #cbd5e1; text-align: center;">
+                                    <span style="display: block; color: #64748b; margin-bottom: 0.2rem;">Costo oficial:
+                                        $1,170.57 MXN</span>
+                                    <strong style="color: #2563eb; font-size: 1rem;">Servicio de gestión: Desde $300
+                                        MXN</strong>
+                                </li>
+                            </ul>
+                        </div>
+                        <div style="text-align: center; margin-top: auto;">
+                            <a href="refrendo-morelos.html" class="btn"
+                                style="background: white; border: 1px solid #e2e8f0; color: #64748b; padding: 0.5rem 1rem; margin-bottom: 1rem; display: inline-block; font-size: 0.9rem; font-weight: 600; text-decoration: none;">Ver
+                                info de Refrendo</a>
+                            <a href="https://wa.me/525535757364?text=Hola,%20necesito%20ayuda%20para%20pagar%20mi%20Refrendo%20Morelos%202026"
+                                class="btn btn-whatsapp"
+                                style="width: 100%; display: flex; justify-content: center; align-items: center; gap: 0.5rem; font-size: 1rem;"><i
+                                    class="fab fa-whatsapp"></i> Tramitar Morelos</a>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </section>
+
         <!-- SEO Content Expansion: Coverage & FAQ (Discrete Mode) -->
         <section class="section-padding seo-content" style="padding-top: 1rem; padding-bottom: 2rem;">
             <div class="container">
