--- a/index.html
+++ b/index.html
@@ -1868,6 +1868,74 @@
                             </div>
                         </div>
                     </div>
+
+                    <!-- Licencia EdoMex Moto Card -->
+                    <div class="tramite-card">
+                        <h3 class="tramite-title">Licencia Tipo C Motociclista Estado de México (4 Años)</h3>
+                        <div class="tramite-image" style="display: flex; justify-content: center;">
+                            <!-- CSS Maroon Card -->
+                            <div
+                                style="background: linear-gradient(135deg, #691C32 0%, #4a1323 100%); border-radius: 12px; width: 220px; height: 320px; padding: 20px; box-shadow: 0 15px 35px rgba(105, 28, 50, 0.4); color: white; font-family: 'Inter', sans-serif; position: relative; overflow: hidden; display: flex; flex-direction: column; border: 1px solid rgba(255,255,255,0.1);">
+                                <div
+                                    style="text-align: center; font-size: 0.55rem; margin-bottom: 12px; opacity: 0.85; font-weight: 600; letter-spacing: 0.5px;">
+                                    ESTADOS UNIDOS MEXICANOS<br>GOBIERNO DEL ESTADO DE MÉXICO<br>SECRETARÍA DE MOVILIDAD
+                                </div>
+                                <div
+                                    style="background: rgba(255,255,255,0.15); padding: 8px; border-radius: 6px; text-align: center; font-weight: 800; font-size: 1.2rem; margin-bottom: 20px; letter-spacing: 1px; border: 1px solid rgba(255,255,255,0.2);">
+                                    LICENCIA DE CONDUCIR<br><span style="font-size: 1.4rem;">TIPO C</span>
+                                </div>
+                                <div style="display: flex; gap: 15px;">
+                                    <div
+                                        style="width: 80px; height: 100px; background: rgba(255,255,255,0.9); border-radius: 8px; display: flex; align-items: center; justify-content: center; color: #cbd5e1; box-shadow: inset 0 2px 5px rgba(0,0,0,0.1);">
+                                        <i class="fas fa-user" style="font-size: 2.5rem;"></i>
+                                    </div>
+                                    <div
+                                        style="flex: 1; font-size: 0.7rem; display: flex; flex-direction: column; gap: 8px; justify-content: center;">
+                                        <div><strong
+                                                style="color: #fca5a5; font-size: 0.6rem; letter-spacing: 0.5px;">VIGENCIA</strong><br><span
+                                                style="font-weight: 600;">4 AÑOS</span></div>
+                                        <div><strong
+                                                style="color: #fca5a5; font-size: 0.6rem; letter-spacing: 0.5px;">VEHÍCULO</strong><br><span
+                                                style="font-weight: 600;">MOTOCICLETA</span></div>
+                                        <div><strong
+                                                style="color: #fca5a5; font-size: 0.6rem; letter-spacing: 0.5px;">ENTIDAD</strong><br><span
+                                                style="font-weight: 600;">EDOMEX</span></div>
+                                    </div>
+                                </div>
+                                <div
+                                    style="margin-top: auto; background: white; height: 45px; border-radius: 6px; display: flex; align-items: center; justify-content: space-between; padding: 0 15px; box-shadow: 0 4px 6px rgba(0,0,0,0.1);">
+                                    <div
+                                        style="font-family: 'Courier New', monospace; font-size: 1.4rem; color: #1e293b; font-weight: bold; letter-spacing: 1px;">
+                                        |||||| || |||</div>
+                                    <i class="fas fa-qrcode" style="color: #1e293b; font-size: 1.6rem;"></i>
+                                </div>
+                            </div>
+                        </div>
+                        <p class="tramite-validity">VÁLIDO EN TODA LA REPÚBLICA MEXICANA</p>
+
+                        <h4 class="tramite-subtitle">Requisitos Claros</h4>
+                        <ul class="requirements-list">
+                            <li class="req-item">
+                                <strong>Identificación Oficial Vigente</strong>
+                                <span>(INE, Pasaporte, etc.)</span>
+                            </li>
+                            <li class="req-item">
+                                <strong>CURP Certificada</strong>
+                                <span>(Formato Reciente)</span>
+                            </li>
+                            <li class="req-item">
+                                <strong>Comprobante de Domicilio</strong>
+                                <span>(EdoMex, max 3 meses)</span>
+                            </li>
+                        </ul>
+
+                        <div class="tramite-btn-container" style="margin-top: 2rem;">
+                            <a href="https://wa.me/525535757364?text=Hola,%20me%20interesa%20tramitar%20la%20Licencia%20Tipo%20C%20de%20Moto%20(4%20años)%20del%20Estado%20de%20México"
+                                class="btn btn-whatsapp-full" style="background: #691C32;">
+                                <i class="fab fa-whatsapp"></i> Cotizar Licencia Moto
+                            </a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
