--- a/alta-de-placas.html
+++ b/alta-de-placas.html
@@ -7,11 +7,11 @@
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-BNJCSQXF11"></script>
     <script>window.dataLayer = window.dataLayer || []; function gtag() { dataLayer.push(arguments); } gtag('js', new Date()); gtag('config', 'G-BNJCSQXF11');</script>
 
-    <title>Alta de Placas 2026 · EdoMex, CDMX y Morelos | Gestor Vehicular · Placas Sin Filas</title>
+    <title>Gestor de Alta de Placas | Gestoría Vehicular EdoMex, CDMX y Morelos 2026</title>
     <meta name="description"
-        content="Tramitamos el Alta de Placas en EdoMex, CDMX y Morelos 2026. Gestor Vehicular Online. Auto nuevo, usado, moto o foráneo. Sin filas, 100% legal. Consulta REPUVE incluida. 55 3575-7364.">
+        content="El mejor Gestor de Alta de Placas y Gestoría Vehicular en EdoMex, CDMX y Morelos 2026. Tramitamos tus placas sin filas, 100% legal. Auto nuevo, usado o moto.">
     <meta name="keywords"
-        content="alta de placas edomex 2026, alta de placas cdmx, alta de placas morelos, alta de placas estado de mexico, placas edomex 2026, placas cdmx 2026, placas morelos 2026, alta foranea edomex, alta de placas moto, alta de placas auto nuevo, alta de placas auto usado, alta de placas sin filas, gestor de placas, gestor vehicular edomex, gestor vehicular cdmx, gestor vehicular morelos, gestoria placas edomex, tramitar placas estado de mexico, repuve consulta, repuve vehiculo, registro publico vehicular, verificar auto repuve, documentos alta de placas, costo alta de placas edomex 2026, primera vez placas mexico">
+        content="gestor de placas, alta de placas edomex 2026, alta de placas cdmx, alta de placas morelos, gestoria vehicular, gestor vehicular, alta de placas moto, gestoria placas edomex, tramitar placas estado de mexico">
     <link rel="canonical" href="https://gestordeautos.com.mx/alta-de-placas.html">
     <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1">
     <meta name="geo.region" content="MX">
