--- a/cambio-de-propietario.html
+++ b/cambio-de-propietario.html
@@ -7,11 +7,11 @@
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-BNJCSQXF11"></script>
     <script>window.dataLayer = window.dataLayer || []; function gtag() { dataLayer.push(arguments); } gtag('js', new Date()); gtag('config', 'G-BNJCSQXF11');</script>
 
-    <title>Cambio de Propietario 2026 · EdoMex, CDMX y Morelos | Gestor Vehicular · Sin Filas</title>
+    <title>Gestor Cambio de Propietario | Gestoría Vehicular EdoMex, CDMX y Morelos</title>
     <meta name="description"
-        content="Tramitamos el Cambio de Propietario Vehicular en EdoMex, CDMX y Morelos 2026. Gestor Vehicular Online. Traspaso rápido, sin filas, 100% legal. Tú envías docs, nosotros tramitamos. 55 3575-7364.">
+        content="El mejor Gestor de Cambio de Propietario y Gestoría Vehicular en EdoMex, CDMX y Morelos 2026. Traspaso rápido, sin filas, 100% legal. Tu mejor opción de Gestor.">
     <meta name="keywords"
-        content="cambio de propietario edomex 2026, cambio de propietario cdmx, cambio de propietario morelos, traspaso vehicular edomex, traspaso vehicular cdmx, traspaso auto usado, cambio propietario auto usado mexico, gestor cambio propietario, endoso factura vehiculo, como hacer cambio de propietario cdmx, cambio propietario sin filas, gestor vehicular edomex, gestoria vehicular edomex, gestoria vehicular cdmx, refactura vehiculo edomex, tarjeta circulacion nuevo dueno, cambio de nombre vehiculo">
+        content="gestor cambio propietario, cambio de propietario edomex 2026, cambio de propietario cdmx, cambio de propietario morelos, gestoria vehicular, gestor vehicular, traspaso vehicular edomex">
     <link rel="canonical" href="https://gestordeautos.com.mx/cambio-de-propietario.html">
     <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1">
     <meta name="geo.region" content="MX">
