--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
 
         gtag('config', 'G-BNJCSQXF11');
     </script>
-    <title>Gestor Vehicular #1 CDMX, EdoMex y Morelos 2026 | Gestoría Vehicular · Placas · Licencias · Refrendo</title>
+    <title>Gestoría Vehicular #1 y Gestor Vehicular CDMX, EdoMex y Morelos 2026</title>
     <meta name="description"
-        content="Gestor de Autos: Gestoría Vehicular en CDMX, Estado de México y Morelos. Gestor Vehicular Online. Alta de Placas, Cambio de Propietario, Reemplacamiento, Licencia Permanente, Licencia Moto y Refrendo Morelos 2026. Sin filas. 55 3575-7364.">
+        content="Tu mejor Gestoría Vehicular y Gestor Vehicular en CDMX, Estado de México y Morelos. Alta de Placas, Cambio de Propietario, Reemplacamiento y Licencias sin filas.">
     <meta name="keywords"
-        content="gestor vehicular, gestoria vehicular, gestoría vehicular, gestor de autos, gestor de placas, gestoria vehicular cdmx, gestoria vehicular estado de mexico, gestoria vehicular morelos, gestoria vehicular edomex, alta de placas edomex, alta de placas cdmx, alta de placas morelos, placas estado de mexico 2026, placas cdmx 2026, placas morelos 2026, placas edomex 2026, reemplacamiento edomex 2026, cambio de propietario edomex, cambio de propietario cdmx, cambio de propietario morelos, licencia permanente cdmx, licencia permanente tipo a, licencia de moto edomex, licencia motociclista sin examen, licencia tipo c edomex, licencia tipo b moto, refrendo morelos 2026, refrendo vehicular morelos, pago refrendo morelos en linea, costo refrendo morelos 2026, alta de placas sin filas, altas vehiculares edomex, alta foranea edomex, repuve consulta, registro publico vehicular, tramites vehiculares sin filas, gestor vehicular cerca de mi, gestoría vehicular online">
+        content="gestoria vehicular, gestor vehicular, gestoría vehicular, gestor de autos, gestor de placas, gestoria vehicular cdmx, gestoria vehicular estado de mexico, gestoria vehicular morelos, alta de placas, cambio de propietario, reemplacamiento edomex 2026, licencia permanente cdmx, refrendo morelos 2026, gestor vehicular cerca de mi">
     <link rel="canonical" href="https://gestordeautos.com.mx/">
-    <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
+    <meta name="robots" content="index, follow, max-image-preview:large">
 
     <!-- Geo Tags for Local SEO (EdoMex, CDMX & Morelos) -->
     <meta name="geo.region" content="MX-MEX">
@@ -75,12 +75,12 @@
         {
           "@type": "LocalBusiness",
           "@id": "https://gestordeautos.com.mx/#organization",
-          "name": "Gestor de Autos - Gestoría Vehicular #1 EdoMex y CDMX",
+          "name": "Gestor de Autos - Gestoría Vehicular #1 y Gestor Vehicular EdoMex, CDMX y Morelos",
           "image": "https://gestordeautos.com.mx/assets/images/logo.jpg",
           "logo": "https://gestordeautos.com.mx/assets/images/logo.jpg",
           "telephone": "+525535757364",
           "url": "https://gestordeautos.com.mx",
-          "description": "Tu Gestoría Vehicular 100% en Línea para CDMX, Estado de México y Morelos. Realizamos alta de placas, reemplacamiento y cambios de propietario sin filas. Servicio seguro y garantizado.",
+          "description": "Líder en Gestoría Vehicular y Gestor Vehicular en CDMX, Estado de México y Morelos. Expertos en alta de placas, reemplacamiento y cambio de propietario con servicio seguro y garantizado.",
           "address": {
             "@type": "PostalAddress",
             "streetAddress": "Servicio Digital y Domicilio",
@@ -356,21 +356,21 @@
                 <div class="hero-text">
                     <h1 style="font-size: 2.5rem; line-height: 1.2;">
                         <span style="font-weight: 800; color: white; display: block;"
-                            data-i18n="hero_title_main">Gestoría Vehicular #1 en CDMX, EdoMex y Morelos</span>
+                            data-i18n="hero_title_main">Gestoría Vehicular #1 y Gestor Vehicular en México</span>
                         <span
                             style="font-weight: 600; color: #e2e8f0; font-size: 0.6em; display: block; margin-top: 0.5rem; letter-spacing: 1px; text-transform: uppercase;"
                             data-i18n="hero_title_sub">
-                            Trámites 100% en Línea. Placas y Licencias sin filas.
+                            Trámites 100% en Línea en CDMX, EdoMex y Morelos.
                         </span>
                         <span
                             style="font-family: 'Yellowtail', cursive; font-size: 1.2em; color: #fbbf24; text-shadow: 2px 2px 0 #000; display: block; margin-top: 1rem;">
-                            Gestoría en Chalco · Naucalpan · Tlalnepantla · CDMX
+                            Tu Gestor Vehicular de Confianza
                         </span>
                     </h1>
-                    <p><strong data-i18n="hero_desc_bold">¿Buscas una Gestoría Confiable?</strong> <span
-                            data-i18n="hero_desc_text">Somos tu mejor opción de <b>Gestor de Autos en CDMX y Estado de
+                    <p><strong data-i18n="hero_desc_bold">¿Buscas la mejor Gestoría Vehicular?</strong> <span
+                            data-i18n="hero_desc_text">Somos tu mejor opción de <b>Gestor Vehicular en CDMX y Estado de
                                 México</b>.
-                            Olvídate de las filas. Cubrimos <b>Gestoría en Naucalpan, Tlalnepantla, Ecatepec,
+                            Olvídate de las filas con nuestra <b>Gestoría en Naucalpan, Tlalnepantla, Ecatepec,
                                 Huixquilucan y todo CDMX</b>.</span>
                     </p>
                     <div class="hero-buttons">
