--- a/licencia-permanente-cdmx.html
+++ b/licencia-permanente-cdmx.html
@@ -14,11 +14,11 @@
         gtag('config', 'G-BNJCSQXF11');
     </script>
 
-    <title>Licencia Permanente CDMX 2026 | Gestor Vehicular CDMX · Tipo A Sin Filas | Gestor de Autos</title>
+    <title>Gestor Licencia Permanente CDMX | Gestoría Vehicular Tipo A Sin Filas</title>
     <meta name="description"
-        content="Tramita tu Licencia Permanente Tipo A en CDMX sin filas en 2026. Gestor Vehicular CDMX con 18+ años de experiencia. Licencia de conducir permanente, válida de por vida en toda la República. 55 3575-7364.">
+        content="El mejor Gestor de Licencia Permanente CDMX 2026. Gestoría Vehicular para trámite de Licencia Tipo A sin filas. 18+ años de experiencia. Válida de por vida.">
     <meta name="keywords"
-        content="licencia permanente cdmx, licencia permanente tipo a, licencia de conducir permanente cdmx 2026, tramitar licencia permanente, requisitos licencia permanente 2026, costo licencia permanente cdmx, estados con licencia permanente, licencia permanente sin filas, gestor licencia cdmx, gestor vehicular cdmx, gestoria vehicular cdmx, licencia de moto edomex, licencia motociclista tipo c sin examen, licencia tipo b moto edomex, licencia moto estado de mexico, gestor de licencias cdmx, licencia un sola vez para toda la vida cdmx">
+        content="gestor licencia cdmx, licencia permanente cdmx, licencia permanente tipo a, gestoria vehicular cdmx, gestor vehicular cdmx, tramite licencia permanente 2026, licencia de conducir permanente cdmx">
     <link rel="canonical" href="https://gestordeautos.com.mx/licencia-permanente-cdmx.html">
     <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
 
