--- a/tramites-edomex.html
+++ b/tramites-edomex.html
@@ -16,11 +16,11 @@
 
         gtag('config', 'G-BNJCSQXF11');
     </script>
-    <title>Gestoría Vehicular Estado de México 2026 | Placas EdoMex · Reemplacamiento · Gestor Vehicular</title>
+    <title>Gestor Vehicular EdoMex #1 | Gestoría Vehicular Estado de México 2026</title>
     <meta name="description"
-        content="Gestor Vehicular en Estado de México 2026. Reemplacamiento EdoMex, Alta de Placas, Cambio de Propietario y Licencias de Moto sin filas. Servicio en Naucalpan, Tlalnepantla, Ecatepec, Chalco y todo EdoMex. 55 3575-7364.">
+        content="El mejor Gestor Vehicular en Estado de México 2026. Gestoría Vehicular para Reemplacamiento EdoMex, Alta de Placas y Cambio de Propietario sin filas.">
     <meta name="keywords"
-        content="gestor vehicular estado de mexico, gestoria vehicular edomex, gestoria vehicular estado de mexico, gestoría vehicular edomex, reemplacamiento edomex 2026, placas edomex 2026, placas estado de mexico 2026, alta de placas edomex, alta foranea edomex, cambio de propietario edomex, baja de placas edomex, licencia moto edomex, licencia tipo c sin examen edomex, renovacion placas edomex, gestor de placas edomex, gestor en naucalpan, gestor en tlalnepantla, gestor en ecatepec, gestor en chalco, gestor en huixquilucan, requisitos reemplacamiento edomex 2026, costo placas edomex 2026, tramites vehiculares edomex sin filas">
+        content="gestor vehicular edomex, gestoria vehicular estado de mexico, gestoria vehicular edomex, gestoría vehicular edomex, reemplacamiento edomex 2026, placas edomex 2026, alta de placas edomex, cambio de propietario edomex, gestor de placas edomex, gestor vehicular cerca de mi">
     <link rel="canonical" href="https://gestordeautos.com.mx/tramites-edomex.html">
     <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
 
@@ -271,10 +271,11 @@
         <!-- Specialized Hero Section -->
         <section class="edomex-hero">
             <div class="container">
-                <h1 style="font-size: 3rem; margin-bottom: 1rem;">Gestoría Vehicular Estado de México</h1>
+                <h1 style="font-size: 3rem; margin-bottom: 1rem;">Gestor Vehicular e Gestoría Vehicular EdoMex</h1>
                 <p style="font-size: 1.25rem; max-width: 700px; margin: 0 auto 2rem; color: #cbd5e1;">
-                    Expertos en <b>Reemplacamiento 2026, Alta de Placas y Cambio de Propietario</b>.
-                    Servicio a domicilio en Naucalpan, Tlalnepantla, Chalco y todo EdoMex.
+                    Expertos en <b>Gestoría Vehicular para Reemplacamiento 2026, Alta de Placas y Cambio de
+                        Propietario</b>.
+                    Tu mejor Gestor Vehicular en Naucalpan, Tlalnepantla, Chalco y todo EdoMex.
                 </p>
                 <div class="hero-buttons" style="justify-content: center;">
                     <a href="https://wa.me/525535757364?text=Hola,%20quiero%20cotizar%20un%20trámite%20del%20EdoMex"
